# reproductive-strategies

./: LICENSE  README.md  agents.py  app.py  choosy.ipynb  doodles.ipynb  model.py  pyproject.toml
publications/paper/: bibliography.bib  outline.qmd  paper.qmd
publications/presentation/: bibliography.bib  slides.qmd
