[project]
name = "pa-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=5.5.0",
    "mesa[rec]>=3.3.0",
    "seaborn>=0.13.2",
    "solara>=1.51.1",
    "uvicorn<0.30",
    "vegafusion[embed]>=2.0.3",
]
